--- a/component/frontend/assets/basic.css
+++ b/component/frontend/assets/basic.css
@@ -117,3 +117,18 @@ div#paypal input {width: auto}
 {
 	background-color: #eee;
 }
+
+table.table-order-detail {
+    width: 100%;
+}
+
+table.table-order-detail th {
+    background-color: transparent;
+    border-bottom: 1px solid #999;
+}
+
+table.table-order-detail td {
+    border-bottom: 1px solid #999;
+    text-align: center;
+    vertical-align: top;
+}
